# kvile

./: .gitignore  CHANGELOG.md  README.md  index.html  package-lock.json  package.json  release-please-config.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: release-please.yml  release.yml  test.yml
docs/: ARCHITECTURE.md  DEVELOPMENT.md  VISION.md
examples/: auth-examples.http  demo.http  http-client.env.json  http-client.private.env.json  simple.http
scripts/: test-ubuntu-build.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  curl.rs  env.rs  history.rs  http_client.rs  lib.rs  main.rs  oidc.rs  watcher.rs
src-tauri/src/parser/: detect.rs  jetbrains.rs  mod.rs  types.rs  vscode.rs
src/components/: Logo.tsx
src/components/CommandPalette/: CommandPalette.tsx
src/components/Dialog/: UnsavedChangesDialog.tsx
src/components/Editor/: BodyEditor.tsx  HeadersEditor.tsx  HttpEditor.tsx  RequestEditor.tsx  ViewToggle.tsx
src/hooks/: useFileWatcher.ts  useGlobalShortcuts.ts  useKeyboardShortcuts.ts  useParseDebounced.ts  useRegisterCommands.ts  useTauri.ts
src/lib/: auth-helpers.ts  commands.ts  dynamic-variables.ts  http-parser.ts  http-serializer.ts  response-formatter.ts  script-runtime.ts  shortcuts.ts  tauri.test.ts  tauri.ts  variables.ts
src/stores/: appStore.test.ts  appStore.ts  authStore.ts  scriptStore.ts  settingsStore.ts
src/test/: setup.ts
(+16 files in other folders)
