[package]
name = "kvile"
version = "0.1.0"
description = "A HTTP debugging application focused on .http files"
authors = ["Torstein S. Skulbru"]
edition = "2021"

[lib]
name = "kvile_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
regex = "1"
notify = "6"
thiserror = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
urlencoding = "2"
base64 = "0.22"
sha2 = "0.10"
rand = "0.8"
url = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
